--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="header">D3-example</p>
 
         <ol>
-          <li></li>
+          <li><a href="column.html">column</a></li>
           <li></li>
           <li></li>
           <li></li>
@@ -30,6 +30,6 @@
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/hellojinjie">hellojinjie</a></p>
       </header>
     </div>
-    
+
   </body>
   </html>
