add map link to index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
         <ol>
           <li><a href="column.html">column</a></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><a href="map.html">Map</a></li>
         </ol>
 
         <p>
