--- a/column.html
+++ b/column.html
@@ -17,7 +17,7 @@
       var width = 500;
       var columnSpan = width / (data.length * 2 + 1);
       
-      var svg = d3.select('.wrapper').append("svg").append('g')
+      var svg = d3.select('.wrapper').append("svg")
         .attr('height', 300)
         .attr('width', 500)
         .attr('fill', 'grey');
